# Kisak-Strike

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  kisak-strike-build-options.cmake
cmake/: source_dll_base.cmake  source_lib_base.cmake
datacache/: mdlcache.cpp
engine/: CMakeLists.txt  dt_localtransfer.cpp  vgui_baseui_interface.cpp
game/client/: CMakeLists.txt  animationlayer.h  c_baseanimating.cpp  c_basecombatcharacter.h  c_basecombatweapon.cpp  c_baseentity.cpp  c_baselesson.cpp  c_baseplayer.cpp  c_baseviewmodel.cpp  c_breakableprop.h  c_func_breakablesurf.cpp  c_gameinstructor.cpp  c_playerresource.cpp  c_sceneentity.cpp  c_te.cpp  c_te_playerdecal.cpp  c_team.cpp  c_user_message_register.h  c_vote_controller.cpp  c_world.cpp  cdll_client_int.cpp  cdll_client_int.h  cdll_util.cpp  cdll_util.h  client_base.cmake  clientmode_shared.cpp  death.cpp  entityoriginmaterialproxy.cpp  fx_tracer.cpp  geiger.cpp  glow_outline_effect.cpp  history_resource.cpp  history_resource.h  hltvcamera.cpp  hltvcamera.h  hltvreplaysystem.cpp  hltvreplaysystem.h  hud.cpp  hud.h  hud_basechat.cpp  (+26 more)
game/client/cstrike15/: clientmode_csnormal.h
game/client/cstrike15/Scaleform/: itempickup_scaleform.cpp
game/client/cstrike15/gameui/: gameui_interface.cpp
game/client/episodic/: c_vort_charge_token.cpp
game/client/game_controls/: vguitextwindow.cpp
game/client/hl2/: C_Func_Monitor.cpp  c_ar2_explosion.cpp  c_barnacle.cpp  c_basehelicopter.cpp  c_basehlplayer.cpp  c_basehlplayer.h  c_citadel_effects.cpp  c_energy_wave.cpp  c_env_alyxtemp.cpp  c_env_starfield.cpp  c_extinguisher.cpp  c_func_tankmortar.cpp  c_hlrootpanel.cpp  c_hlrootpanel.h  c_npc_combinegunship.cpp  c_npc_hydra.cpp  c_npc_manhack.cpp  c_npc_rollermine.cpp  c_plasma_beam_node.cpp  c_prop_combine_ball.cpp  c_prop_combine_ball.h  c_rotorwash.cpp  c_strider.cpp  c_te_concussiveexplosion.cpp  c_te_flare.cpp  c_vehicle_airboat.cpp  c_vehicle_cannon.cpp  c_vehicle_crane.cpp  c_vehicle_prisoner_pod.cpp  c_waterbullet.cpp  c_weapon__stubs_hl2.cpp  c_weapon_crossbow.cpp  c_weapon_gravitygun.cpp  c_weapon_physcannon.cpp  c_weapon_stunstick.cpp  clientmode_hlnormal.cpp  clientmode_hlnormal.h  fx_antlion.cpp  fx_hl2_impacts.cpp  fx_hl2_tracers.cpp  (+22 more)
game/client/hl2/VGUI/: counterstrikeviewport.cpp  counterstrikeviewport.h
game/client/hl2/gameui/: BasePanel.cpp  basepanel.h  changegamedialog.cpp  contentcontroldialog.cpp  gameconsole.cpp  gameconsole.h  gameui_interface.cpp  gameui_interface.h  optionsdialog.cpp  optionssubmultiplayer.cpp  savegamedialog_xbox.cpp  sys_utils.cpp  uigamedata.cpp  urlbutton.cpp  vguisystemmoduleloader.cpp
game/client/hl2/gameui/hl2/: hl2basepanel.cpp  hl2basepanel.h
game/client/portal/: clientmode_portal.cpp
game/client/template/: c_sdk_player.cpp  hud_damageindicator.cpp
game/client/template/GameUI/: BaseModPanel.cpp  optionsmousedialog.cpp  vloadingprogress.cpp
game/client/template/vgui/: nb_header_footer.cpp
game/server/: BaseAnimatingOverlay.cpp  CMakeLists.txt  EnvHudHint.cpp  ai_basenpc.cpp  ai_memory.cpp  ai_speech.cpp  base_gameinterface.cpp  basebludgeonweapon.cpp  basecombatcharacter.cpp  basecombatcharacter.h  basecombatweapon.cpp  baseentity.cpp  basemultiplayerplayer.cpp  baseprojectile.cpp  cbaseprojectile.h  data_collector.h  dedicated_server_ugc_manager.cpp  effects.cpp  explode.h  func_tank.cpp  gameinterface.cpp  maprules.cpp  nav_generate.cpp  physics_main.cpp  player.cpp  player.h  props.cpp  sceneentity.cpp  server_base.cmake  server_log_http_dispatcher.cpp  te.cpp  te_explosion.cpp  team.cpp  triggers.cpp  util.cpp  vehicle_baseserver.cpp  vote_controller.cpp  vote_controller.h  vscript_server.cpp
game/server/cstrike15/: cs_pushentity.cpp
game/server/hl2/: ai_behavior_actbusy.cpp  ai_spotlight.cpp  antlion_maker.cpp  basehlcombatweapon.cpp  cbasehelicopter.cpp  cbasehelicopter.h  cbasespriteprojectile.cpp  energy_wave.h  env_headcrabcanister.cpp  env_speaker.cpp  func_tank.cpp  func_tank.h  grenade_ar2.cpp  grenade_beam.cpp  grenade_brickbat.cpp  grenade_energy.cpp  grenade_frag.cpp  grenade_homer.cpp  grenade_molotov.cpp  grenade_pathfollower.cpp  grenade_spit.h  hl2_client.cpp  hl2_eventlog.cpp  hl2_gamestats.h  hl2_player.cpp  hl2_player.h  hl_playermove.cpp  hl_pushentity.cpp  item_ammo.cpp  item_dynamic_resupply.cpp  item_healthkit.cpp  npc_BaseZombie.cpp  npc_BaseZombie.h  npc_alyx.cpp  npc_alyx.h  npc_alyx_episodic.cpp  npc_alyx_episodic.h  npc_antlion.cpp  npc_antlion.h  npc_antliongrub.cpp  (+72 more)
game/server/portal/: portal_player.cpp  portal_shareddefs.h
game/shared/: SoundEmitterSystem.cpp  achievementmgr.cpp  achievementmgr.h  achievements_hlx.cpp  ammodef.cpp  ammodef.h  bannedwords.cpp  base_playeranimstate.cpp  baseachievement.h  basecombatcharacter_shared.cpp  basecombatweapon_shared.cpp  basecombatweapon_shared.h  basegrenade_shared.cpp  basegrenade_shared.h  baseplayer_shared.cpp  baseviewmodel_shared.cpp  baseviewmodel_shared.h  beam_shared.cpp  beam_shared.h  game_timescale_shared.cpp  gamemovement.cpp  gamerules.cpp  gc_clientsystem.cpp  hintmessage.cpp  multiplay_gamerules.cpp  physics_main_shared.cpp  predicted_viewmodel.cpp  singleplay_gamerules.cpp  takedamageinfo.cpp  teamplay_gamerules.cpp  ugc_request_manager.cpp  usermessages.h  voice_gamemgr.cpp  voice_status.cpp  voice_status.h  weapon_parse.cpp  weapon_parse.h
game/shared/econ/: econ_entity.h  econ_item.cpp  econ_item.h  econ_item_inventory.cpp  econ_item_schema.h  econ_item_view.cpp
game/shared/hl2/: achievements_hl2.cpp  basehlcombatweapon_shared.cpp  basehlcombatweapon_shared.h  hl2_gamerules.cpp  hl2_gamerules.h  hl2_usermessages.cpp  hl2_usermessages.proto
game/shared/portal/: portal_weapon_parse.cpp  portal_weapon_parse.h  weapon_portalbase.cpp
launcher/: CMakeLists.txt  launcher.cpp
materialsystem/shaderapidx9/: CMakeLists.txt
public/: dt_recv.h  dt_send.h  optimize.h  studio.h  vphysics_interface.h
public/tier1/: lerp_functions.h
studiorender/: studiorendercontext.cpp
